--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="theme-color" content="#000000">
-  <title>Klaytn Addition Game</title>
+  <title>HotDog Token</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
@@ -17,9 +17,98 @@
 </head>
 
 <body>
-  <div>
-    <h1 id="token-name"></h1>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2" style="text-align:center">
+        <h1 id="token-name">HotDog Token</h1>
+        <p id="token-total"></p>
+        <p id="token-address"></p>
+        <br>
+        <br>
+        <button type="button"
+          class="btn btn-info"
+          id="login"
+          data-toggle="modal"
+          data-target="#loginModal">
+          로그인
+        </button>
+        <button type="button"
+          class="btn btn-info"
+          id="logout"
+          style="display: none; text-align: center"
+          onclick="App.handleLogout()">
+          로그아웃
+        </button>
+        <br>
+        <br>
+        <a href="https://wallet.klaytn.com/" id="make-wallet">지갑 만들기</a>
+        <br>
+        <br>
+        <label id="owner" style="display: none">(owner)</label>
+        <div id="address"></div>
+        <div id="balance"></div>
+
+        <button type="button" class="btn btn-default" id="send-button" style="width:500px" onclick="App.showSendBox()">send</button>
+        
+        <div align="center" id="send-box" style="display: none">
+          <table>
+            <tr>
+              <td>
+                <label style="width: 60px; text-align: center">To</label>
+              </td>
+              <td>
+                <input style="width:440px;" type="text" id="recipient">
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <label style="width:60px; text-align: center">Hotdog</label>
+              </td>
+              <td>
+                <input style="width: 440px" type="text" id="amount">
+              </td>
+            </tr>
+          </table>
+          <button type="button"
+                style="width:500px" 
+                class="btn btn-info" 
+                id="send-hotdog"
+                onclick="App.transfer()">
+                call
+          </button>
+        </div>
+        <br>
+        <br>
+        <br>
+        <h3>account list for test</h3>
+        <p>account1 : 0x60fe885a3e79f27e9c5b40c0cda179b627cd9466</p>
+        <p>account2 : 0xf402f8d845e659b53858c9b0394a3224089aec26</p>
+      </div>
+    </div>
   </div>
+
+  <div class="modal fade" tabindex="-1" role="dialog" id="loginModal">
+      <div class="modal-dialog modal-sm">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div class="form-group">
+              <label for="keystore">Keystore</label>
+              <input type="file" id="keystore" onchange="App.handleImport()">
+            </div>
+            <div class="form-group">
+                <label for="input-password">비밀번호</label>
+                <input type="password" class="form-control" id="input-password" onchange="App.handlePassword()">
+                <p class="help-block" id="message"></p>
+              </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+            <button type="button" class="btn btn-primary" id="submit" onclick="App.handleLogin()">제출</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
+    <br>
 </body>
 
 </html>
