--- a/src/index.html
+++ b/src/index.html
@@ -83,9 +83,20 @@
         <p>account1 : </p><p id="account1" onclick="App.clipboard('#account1')">0x60fe885a3e79f27e9c5b40c0cda179b627cd9466</p>
         <p>account2 : </p><p id="account2" onclick="App.clipboard('#account2')">0xf402f8d845e659b53858c9b0394a3224089aec26</p>
 
-        <input style="width: 350px" type="text" id="input-logic-address"><br><br>
-        <button class="btn btn-default" id="set-logic" onclick="App.setLogic()">connect to logic</button>
-        <p id="logic-address"></p>
+        token : <span id="connected-token-address"></span><br>
+        <input style="width: 350px" type="text" id="input-token-address"><br>
+        <button class="btn btn-default" id="set-token" onclick="App.setToken()">connect to Token</button>
+        <br>
+
+        logic : <span id="connected-logic-address"></span><br>
+        <input style="width: 350px" type="text" id="input-logic-address"><br>
+        <button class="btn btn-default" id="set-logic" onclick="App.setLogic()">connect to Logic</button>
+        <br>
+
+        proxy : <span id="connected-proxy-address"></span><br>
+        <input style="width: 350px" type="text" id="input-proxy-address"><br>
+        <button class="btn btn-default" id="set-proxy" onclick="App.setLogic()">connect to Proxy</button>
+        <br>
       </div>
     </div>
   </div>
